	* Dilation and erosion effects added
	* Seven new edge detection filters added - Sobel, Prewitt, Kirsch, Gradient, Roberts, Laplace, Morphological
	* Drawing operations on utility channels now respect tool opacity
	* Drawing in image channel with coupled alpha now ignores drawing modes for alpha channel
	* Smudge tool now works about two times faster
	* 12 new blend modes added
	* BUGFIX - Polygon line selection now clearer in Windows version
	* BUGFIX - Occasional redraw glitches in paste preview eliminated
	* BUGFIX - "Remove All Layers" wilh layers window closed doesn't cause crash
	* BUGFIX - Pasting in tint mode into indexed images' utility channels now works correctly
	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel
	* BUGFIX - Alt+S key now opens Selection menu as it should

3.21	2008-6-8

	* Russian translation added by Sergey Irupin
	* Spanish translation updated by Antonio Sanchez Leon
	* Galician translation added by Miguel Anxo Bouzada
	* Use 'xdg-open' if available to open HTML help in default browser on Linux
	* Relaxed sanity checking in XPM loader to accept files with malformed headers
	* "Exact Conversion" option added to Palette->Create Quantized
	* Counting used colours now about twice as fast
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - Canvas, view and palette area borders now can't be messed up by theme engines
        * BUGFIX - Persistent rectangle selection now doesn't steal arrow keys from gradient placement tool
	* BUGFIX - Internationalization now works properly in GTK+1
	* BUGFIX - FreeType text rendering quality improved on Windows
	* BUGFIX - Text in active menu items no longer becomes invisible on Windows Vista (fixed in GTK+)
	* BUGFIX - Removable drives are now visible in fileselector on Windows (fixed in GTK+)

3.20	2007-12-27

	* mtPaint is now licensed as GPL version 3 (or later)